--- a/src/Pages/LandingPage/Initial/Initial.css
+++ b/src/Pages/LandingPage/Initial/Initial.css
@@ -15,7 +15,9 @@
     width: 44%;
     height: 100vh;
     background: rgba(255, 178, 203, 0.30);
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .Textcontent{
     width: 600px;
@@ -43,5 +45,16 @@ margin: 10px 0 60px 0;
 height: 68px;
 flex-shrink: 0;
 border-radius: 40px;
+    margin-right: 50px;
+}
+.buttons {
 
+}
+.buttons .about{
+    border: 1px #4A2C36 solid;
+    background-color: white;
+}
+.catImage img{
+    min-width: 500px;
+    min-height: 500px;
 }
