--- a/src/Pages/LandingPage/Initial/Initial.css
+++ b/src/Pages/LandingPage/Initial/Initial.css
@@ -20,7 +20,7 @@
     justify-content: center;
 }
 .Textcontent{
-    width: 600px;
+    width: 60%;
 }
 .Textcontent h1{
     color: #F98AAE;
@@ -55,6 +55,56 @@ border-radius: 40px;
     background-color: white;
 }
 .catImage img{
-    min-width: 500px;
-    min-height: 500px;
+    max-width: 500px;
+    max-height: 500px;
+    aspect-ratio: 4/3;
+}
+@media (max-width: 1200px) {
+    .Textcontent p{
+        font-size: 18px;
+
+    }
+    .Textcontent h1{
+        font-size: 38px;
+    }
+    .buttons button{
+        margin-right: 30px;
+    }
+    .catImage img{
+        max-width: 400px;
+
+    }
+    
+}
+@media (max-width: 1400px) {
+    .Textcontent{
+        width: 80%;
+
+    }
+}
+@media (max-width: 1000px) {
+    .Textcontent p{
+        font-size: 18px;
+
+    }
+    .Textcontent h1{
+        font-size: 38px;
+    }
+    .buttons button{
+        margin-right: 10px;
+    }
+}
+@media (max-width: 1000px) {
+    .Textcontent p{
+        font-size: 18px;
+
+    }
+    .Textcontent h1{
+        font-size: 38px;
+    }
+    .buttons button{
+        margin-right: 10px;
+        width: 160px;
+        height: 60px;
+    }
 }
