--- a/src/Pages/LandingPage/About/About.css
+++ b/src/Pages/LandingPage/About/About.css
@@ -1,5 +1,6 @@
 li img{
-    max-width: 303px;
+    max-width: 250px;
+    aspect-ratio: 4/4;
 }
 li{
     display: flex;
@@ -23,9 +24,57 @@ ul{
 }
 li a{
     font-size: 15px;
+    text-decoration: none;
+    color: #4A2C36;
+
 }
 li h2{
     width: 300px;
     margin: 0;
+    font-size: 25px;
     text-align: center;
+}
+@media (max-height: 900px) {
+    li img{
+        max-width: 250px;
+    }
+    li h2{
+        font-size: 16;
+    }
+}
+@media (max-height: 700px) {
+    li img{
+        max-width: 210px;
+    }
+    li h2{
+        font-size: 12;
+    }
+}
+
+@media (max-width: 1200px) {
+    li img{
+        max-width: 200px;
+    }
+    li h2{
+        width: 150px;
+        font-size: 20px;
+    }
+    ul{
+    }
+    li a{
+        font-size: 13px;
+        text-align: center;
+        text-decoration: none;
+        color: #4A2C36;
+    
+    }
+    
+}
+@media (max-width: 900px) {
+
+    .Banner{
+        width: 100%;
+        background: rgba(255, 178, 203, 0.30);
+    
+    }
 }
