--- a/src/Pages/LandingPage/Support/Support.css
+++ b/src/Pages/LandingPage/Support/Support.css
@@ -26,12 +26,15 @@
     height: 500px;
 }
 .imagePaper h2{
+    margin: 0;
+    height: 30%;
     color: #4A2C36;
 text-align: center;
 font-family: Rowdies;
 font-size: 48px;
 font-style: normal;
 font-weight: 700;
+aspect-ratio: 4/3;
 line-height: normal;
 }
 .Formulario{
@@ -44,4 +47,38 @@ line-height: normal;
 }
 .Formulario form{
     gap: 20%;
+}
+@media (max-height: 900px) {
+    .imagePaper img{
+        width: 400px;
+        height: 400px;
+    }
+    .imagePaper h2{
+        font-size: 38px;
+        height: 20%;
+    }
+}
+@media (max-height: 800px) {
+    .imagePaper img{
+        width: 350px;
+        height: 350px;
+    }
+}
+@media (max-width: 1100px) {
+    .imagePaper img{
+        width: 350px;
+        height: 350px;
+    }
+    .SupportContainer{
+        width: 90%;
+    }
+}
+@media (max-width: 900px) {
+    .imagePaper img{
+        width: 350px;
+        height: 350px;
+    }
+    .SupportContainer{
+        width: 90%;
+    }
 }
