--- a/src/Components/Input/Input.css
+++ b/src/Components/Input/Input.css
@@ -1,21 +1,26 @@
-.InputContainer{
+.campoInput{
     display: flex;
     flex-direction: column;
-    margin-bottom: 3%;
-}
-.InputContainer input{
+    margin-bottom: 18px;
     width: 70%;
-    height: 50px;
-    flex-shrink: 0;
-    border-radius: 3px;
-    border: 1px solid #4A2C36;
-
-
+    max-width: 500px;
+}
+.campoInput input{
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff00;
+    border: 0px;
+    
+font-family: Open Sans;
+font-size: 13px;
+font-style: normal;
+font-weight: 600;
+line-height: 131.523%; /* 24.989px */
 }
 
-.InputContainer label{
-    color: #000;
-    margin-bottom: 1.5%;
+.campoInput label{
+    color: #4A2C36;
+    margin-bottom: 10px;
 
 font-family: Open Sans;
 font-size: 16px;
@@ -23,17 +28,18 @@ font-style: normal;
 font-weight: 600;
 line-height: 131.523%; /* 24.989px */
 }
-.InputContainer input:focus{
+.campoInput input:focus{
     box-shadow: 0 0 0 0;
     outline: 0;
 }
 
-.InputContainer textarea:focus{
+.campoInput textarea:focus{
     box-shadow: 0 0 0 0;
     outline: 0;
 }
-.InputContainer textarea{
-    width: 70%;
+.campoInput textarea{
+    width: 100%;
+    border-radius: 10px;
     resize: none;
     height: 200px;
     flex-shrink: 0;
@@ -42,14 +48,34 @@ line-height: 131.523%; /* 24.989px */
 
 
 }
+.inputContainer{
+    width: 100%;
+    height: 50px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid #4A2C36;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 
-.InputContainer textarea::placeholder{
+}
+.iconInput{
+    width: 26px;
+    margin: 0 10px 0 10px;
+
+}
+.passwordInput{
+    cursor: pointer;
+    width: 36px;
+    margin: 0 10px 0 10px;
+}
+.campoInput textarea::placeholder{
     color: #000;
 font-family: Open Sans;
 /* font-size: 19px; */
 font-style: normal;
 }
-.InputContainer input::placeholder{
+.campoInput input::placeholder{
     color: #000;
 font-family: Open Sans;
 /* font-size: 19px; */
