--- a/src/Components/Input/Input.css
+++ b/src/Components/Input/Input.css
@@ -12,7 +12,7 @@
     border: 0px;
     
 font-family: Open Sans;
-font-size: 13px;
+font-size: 16px;
 font-style: normal;
 font-weight: 600;
 line-height: 131.523%; /* 24.989px */
@@ -41,10 +41,14 @@ line-height: 131.523%; /* 24.989px */
     width: 100%;
     border-radius: 10px;
     resize: none;
+    font-weight: 600;
     height: 200px;
     flex-shrink: 0;
     border-radius: 3px;
+    font-family: Open Sans;
+    font-size: 16px;
     border: 1px solid #4A2C36;
+    
 
 
 }
