--- a/src/Pages/LandingPage/Nav/Nav.css
+++ b/src/Pages/LandingPage/Nav/Nav.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Rowdies:wght@300&display=swap');
-header{
+.navOutside{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -23,7 +23,7 @@ header{
     max-width: 160px    ;
 }
 
-li{
+.nav li{
     color: #4A2C36;
 font-family: Rowdies;
 font-size: 20px;
@@ -35,7 +35,7 @@ display: flex;
 align-items: center;
 justify-content: center;
 }
-ul{
+.nav ul{
     display: flex;
     gap: 60px;
     padding: 0;
