--- a/src/Components/NavSlide/NavSlide.css
+++ b/src/Components/NavSlide/NavSlide.css
@@ -1,9 +1,9 @@
 .navInside{
-    width: 100;
+    width: 100%;
     height: 7%;
     background-color: #FAFAFA;
     display: flex;
-
+    z-index: 2;
     justify-content: space-between;
 
 }
@@ -25,11 +25,13 @@
 }
 .logoImg{
     max-width: 140px;
+    cursor: pointer;
 
 }
 .navContainer{
     width: 100%;
-    position: fixed;
+    position:sticky;
+    top: 0;
     z-index: 1;
 }
 .navOptions{
