--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,12 +1,169 @@
-.a{
+.top{
     width: 100%;
-    height: 100%;
-    background-color: rgb(255, 255, 255);
+    height: 15%;
     display: flex;
-    align-items: center;
+    flex-direction: column;    
+}
+.tittle{
+height: 50%;
+width: 100%;
+display: flex;
+align-items: end;
+justify-content: center;
+}
+.infoZone {
+    width: 100%;
+    height: 65%;
+    display: flex;
+    box-shadow: 0px 14px 3px -15px #111;    
+    justify-content: space-between;
+}
+.infoZone .filterByData{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+}
+.tittle h1{
+    color: #F98AAE;
+text-align: center;
+font-family: Rowdies;
+font-size: 50px;
+font-style: normal;
+font-weight: 700;
+margin: 0;
+line-height: normal;
 }
 .Home{
 
     width: 100%;
+    min-height: 100vh;
+}
+.newPetButton{
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+}
+.petsCounter{
+    height: 100%;
+    display: flex;
+    align-items: end;
+}
+.petsCounter p{
+    color: #4A2C36;
+font-family: Open Sans;
+font-size: 19px;
+font-style: normal;
+font-weight: 600;
+line-height: 131.523%; /* 24.989px */
+}
+.cadNewPet button{
+    color: white;
+    width: 70%;
+    font-size: 16px;
+}
+main{
+    width: 100%;
+    height: 78%;
+}
+.cadNewPet{
+    width: 50%;
+    display: flex;
+    height: 100%;
+    align-items: center;
+}
+.pets{
+    margin-top: 5%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.filter{
+    width: 20%;
+    height: 70%;
+    position:absolute;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    flex-direction: column;
+}
+.filterBanner{
+    width: 70%;
+    min-width: 250px;
+    height: 80%;
+    border-radius: 10px;
+    background-color: #FAFAFA;
+}
+.filterTittle{
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+.filterBanner h5{
+    margin: 0;
+    color: #4A2C36;
+font-family: Open Sans;
+font-size: 19px;
+font-style: normal;
+font-weight: 600;
+
+
+}
+.filterTittle img{
+    width: 40px;
+    height: 40px;
+}
+.filterBanner li{
+    display: flex;
+    flex-direction: row;
+}
+.filterBanner ul{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: start;
+    padding: 0;
+}
+.filterBanner p{
+    margin: 0;
+    color: #4A2C36;
+font-family: Open Sans;
+font-size: 16px;
+font-style: normal;
+font-weight: 600;
+}
+.filters{
+    padding: 10% 0 0 10%;
+}
+.petsWrap{
+    width: 60%;
     height: 150vh;
+    display: flex;
+    row-gap: 5%;
+    align-items: center;
+    flex-wrap:wrap;
+    flex-direction: row;
+
+}
+.petsWrap > *{
+    /* flex-basis: 33%; default value */
+    /* flex-grow: 0; */
+}
+@media (max-width: 1400px) {
+    .pets{
+        align-items: end;
+        justify-content: end;
+    }
+    .petsWrap{
+        width: 80%;
+    }
+    .filter{
+        align-items: start;
+    }
 }
