--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -4,6 +4,11 @@
     display: flex;
     flex-direction: column;    
 }
+.content{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
 .tittle{
 height: 50%;
 width: 100%;
@@ -77,7 +82,7 @@ main{
 }
 .pets{
     margin-top: 5%;
-    width: 100%;
+    width: 70%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -86,7 +91,6 @@ main{
 .filter{
     width: 20%;
     height: 70%;
-    position:absolute;
     display: flex;
     align-items: center;
     justify-content: end;
@@ -142,7 +146,7 @@ font-weight: 600;
     padding: 10% 0 0 10%;
 }
 .petsWrap{
-    width: 60%;
+    width: 100%;
     height: 150vh;
     display: flex;
     row-gap: 5%;
@@ -158,12 +162,14 @@ font-weight: 600;
 @media (max-width: 1400px) {
     .pets{
         align-items: end;
+        width: 80%;
         justify-content: end;
     }
     .petsWrap{
-        width: 80%;
+        width: 100%;
     }
     .filter{
-        align-items: start;
+        width: 30%;
+        /* align-items: start; */
     }
 }
