--- a/src/Components/PetView/PetView.css
+++ b/src/Components/PetView/PetView.css
@@ -3,6 +3,7 @@
     height: 15%;
     margin-left: 1%;
     min-width: 300px;
+    min-height: 200px;
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
