--- a/src/Components/NavSlide/NavSlide.css
+++ b/src/Components/NavSlide/NavSlide.css
@@ -2,6 +2,7 @@
     width: 100%;
     background-color: #FAFAFA;
     display: flex;
+    height: 6vh;
     z-index: 2;
     justify-content: space-between;
 
@@ -23,7 +24,7 @@
     cursor: pointer;
 }
 .logoImg{
-    max-width: 140px;
+    max-width: 120px;
     cursor: pointer;
 
 }
@@ -36,8 +37,8 @@
     z-index: 1;
 }
 .navOptions{
-    min-width: 200px;
-    width: 11%;
+    min-width: 190px;
+    width: 5%;
     margin-left: 10px;
     display: flex;
     align-items: center;
@@ -70,6 +71,15 @@ line-height: normal;
     align-items: center;
     justify-content: start;
     gap: 5%;
+}
+.navSlide{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    gap: 5%;
+
 }
 .slide ul li:Hover{
     background-color: #dddddd;
