--- a/src/Pages/LandingPage/Support/Support.css
+++ b/src/Pages/LandingPage/Support/Support.css
@@ -27,11 +27,12 @@
 }
 .imagePaper h2{
     margin: 0;
+    width: 80%;
     height: 30%;
     color: #4A2C36;
 text-align: center;
 font-family: Rowdies;
-font-size: 48px;
+font-size: 38px;
 font-style: normal;
 font-weight: 700;
 aspect-ratio: 4/3;
