--- a/src/Components/UploadWidged/UploadWidget.css
+++ b/src/Components/UploadWidged/UploadWidget.css
@@ -16,6 +16,9 @@
     border: 2px dashed #F98AAE;
     border-radius: 5px;
     position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 .labelUpload{
 
