--- a/src/Components/PetView/PetView.css
+++ b/src/Components/PetView/PetView.css
@@ -14,6 +14,7 @@
 .petImage{
     width: 100%;
     height: 85%;
+    min-height: 180px;
     min-width: 280px;
     /* max-height: 180px; */
     background-size: cover;
