--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -43,7 +43,7 @@ line-height: normal;
 .Home{
 
     width: 100%;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 .newPetButton{
     width: 30%;
@@ -147,10 +147,11 @@ font-weight: 600;
 }
 .petsWrap{
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     row-gap: 1%;
-    align-items: center;
+    gap: 40px;
+    /* align-items: center; */
     flex-wrap:wrap;
     flex-direction: row;
 
