--- a/src/Pages/Pets/Pets.css
+++ b/src/Pages/Pets/Pets.css
@@ -84,7 +84,9 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
+    flex-direction: column;
+    gap: 10px;
 }
 .infoBanner{
 
@@ -208,7 +210,7 @@ line-height: normal;
     justify-content: center;
     
 }
-.imageModal{
+.rescueModal{
     width: 100%;
     height: 100%;
     position: fixed;
@@ -219,26 +221,32 @@ line-height: normal;
     align-items: center;
     justify-content: center;
 }
-.imageModalContainer{
+.rescueModalContainer{
     width: 80%;
     height: 80vh;
     background-color: #FFF;
     padding: 20px;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: space-around;
+    gap: 20px;
     position: relative;
+
+}
+.rescueModalContainer h2{
+    color: #F98AAE;
+    text-align: center;
+    font-family: Rowdies;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+
 }
 .close{
     position: absolute;
     top: 20px;
-}
-.imagesFromModal{
-    min-width: 500px;
-    min-height: 400px;
-    max-width: 500px;
-    max-height: 400px;
-}
-.corouselImages{
-    width: 70%;
-    height: 100%;
+    left: 20px;
+    cursor: pointer;
 }
