--- a/src/Pages/LandingPage/Nav/Nav.css
+++ b/src/Pages/LandingPage/Nav/Nav.css
@@ -5,8 +5,9 @@
     align-items: center;
     justify-content: space-around   ;
     width: 100%;
-    height: 6%;
+    height: 6vh;
     position: fixed;
+    top: 0;
     gap: 20%;
     background-color: #FDFDFD;
     z-index: 1;
