--- a/src/Pages/OngCad/OngCad.css
+++ b/src/Pages/OngCad/OngCad.css
@@ -41,7 +41,7 @@ line-height: normal;
     display: flex;
     flex-direction: row;
 }
-.BannerInputs{
+.OngBannerInputs{
     width: 50%;
     height: 60vh;
     display: flex;
