--- a/src/Components/ButtonForms/ButtonForms.css
+++ b/src/Components/ButtonForms/ButtonForms.css
@@ -14,6 +14,8 @@ background-color: #3D1723;
   width: 20%;
   height: 50px;
   border: 0px;
+  min-width: 100px;
+  min-height: 50px;
   border-radius: 10px;
   color: white;
   overflow: hidden;
