--- a/src/Components/Comment/Comment.css
+++ b/src/Components/Comment/Comment.css
@@ -36,4 +36,6 @@ line-height: normal;
 .UserCommentInfo > img{
     max-width: 50px;
     border-radius: 100%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
 }
