--- a/src/Components/Input/Input.css
+++ b/src/Components/Input/Input.css
@@ -48,9 +48,13 @@ line-height: 131.523%; /* 24.989px */
     font-family: Open Sans;
     font-size: 16px;
     border: 1px solid #4A2C36;
-    
+}
+@media(max-height: 800px){
+    .campoInput textarea{
 
+        height: 150px;
 
+    }
 }
 .inputContainer{
     width: 100%;
