--- a/src/Pages/LandingPage/Support/Support.css
+++ b/src/Pages/LandingPage/Support/Support.css
@@ -58,6 +58,9 @@ line-height: normal;
         font-size: 38px;
         height: 20%;
     }
+    .Support{
+        height: 100vh;
+    }
 }
 @media (max-height: 800px) {
     .imagePaper img{
