multiple images uploads

--- a/src/Components/PetView/PetView.css
+++ b/src/Components/PetView/PetView.css
@@ -1,11 +1,11 @@
 .petContainer{
-    width: 20%;
-    height: 15%;
+    width: 28%;
+    height: 40%;
     margin-left: 1%;
+    max-width: 300px;
     min-width: 250px;
     min-height: 150px;
     cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 .petContainer:hover{
     box-shadow: rgba(0, 0, 0, 0.1) 0px 6px 8px -1px, rgba(0, 0, 0, 0.06) 0px 4px 6px -1px;
