--- a/src/Pages/Pets/Pets.css
+++ b/src/Pages/Pets/Pets.css
@@ -72,7 +72,13 @@
     max-height: 300px;
     min-height: 300px;
     max-width: 500px;
+    min-width: 500px;
+    object-fit: contain;
+    background-color: rgb(99, 99, 99);
+    
+
 }
+
 .imgCollunmSon{
     margin-bottom: 10px;
     max-width: 80%;
@@ -129,6 +135,7 @@ line-height: normal;
     flex-direction: row;
     align-items: center;
     justify-content: end;
+    /* margin-left:250px ; */
 }
 .petData p{
     color: #F98AAE;
@@ -151,6 +158,9 @@ line-height: normal;
 }
 .imgCollunmSon{
     cursor: pointer;
+    width: 100px;
+    height: 80px;
+    object-fit: cover;
 }
 .tittleComentarios{
     width: 100%;
