--- a/src/Pages/LandingPage/Ong/Ong.css
+++ b/src/Pages/LandingPage/Ong/Ong.css
@@ -9,12 +9,18 @@
  width: 100%;
 z-index: -1;
 bottom: 0;
+height: 100%;
+display: flex;
+align-items: end;
+justify-content: end;
+
 
 }
 .background svg{
     width: 100%;
-    clip-path:polygon(13px);
-    height: 100%;
+    position: relative;
+    /* bottom: 0px; */
+    /* height: 100%; */
 }
 
 .TextContainer{
