--- a/src/Pages/OngCad/OngCad.css
+++ b/src/Pages/OngCad/OngCad.css
@@ -1,6 +1,6 @@
 .OngCad{
     width: 100%;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     background-color: #F6F6F6;
     display: flex;
     align-items: center;
@@ -8,11 +8,12 @@
 }
 .OngCreateContainer{
     width: 70%;
-    height: 100vh;
-    /* min-height: 130vh; */
+    /* height: 100vh; */
+    min-height: 100vh;
     display: flex;
+    /* margin-top: 6vh; */
     justify-content: center;
-    align-items: end;
+    align-items: center;
     
 }
 .banner{
@@ -23,6 +24,7 @@
 }
 .bannerTittle{
     width: 100%;
+    margin-top: 6vh;
 }
 .bannerTittle h1{
     text-align: center;
@@ -37,13 +39,13 @@ line-height: normal;
 .bannerContent{
     width: 100%;
     height: 80%;
-    padding-left: 10%;
+    justify-content: center;
     display: flex;
     flex-direction: row;
 }
 .OngBannerInputs{
     width: 50%;
-    height: 60vh;
+    /* height: 60vh; */
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -56,7 +58,7 @@ line-height: normal;
  }   
 .OngMaps{
     width: 40%;
-    height: 60vh;
+    /* height: 60vh; */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -75,7 +77,36 @@ line-height: normal;
 }
 @media (max-Width: 1300px) {
  
- .petCreateContainer{
+ .OngCreateContainer{
     width: 90%;
  }
+}
+@media (max-Width: 1000px) {
+ 
+ .OngCreateContainer{
+    width: 100%;
+ }
+}
+@media (max-Width: 700px){
+    .bannerContent{
+        flex-direction: column;
+     }
+    .OngBannerInputs{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }     
+    .checkboxes{
+        width: 50vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .TypeTittle{
+        text-align: center;
+    }
+    .OngMaps{
+        width: 100%;
+    }
 }
