--- a/src/Components/Comment/Comment.css
+++ b/src/Components/Comment/Comment.css
@@ -10,7 +10,7 @@
     /* width: 100px; */
     margin: 0;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     text-align: end;
     color: #3D1723;
 text-align: center;
