--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -13,7 +13,7 @@
 height: 50%;
 width: 100%;
 display: flex;
-align-items: end;
+align-items: flex-end;
 justify-content: center;
 }
 .infoZone {
@@ -27,7 +27,7 @@ justify-content: center;
     width: 30%;
     height: 100%;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: center;
 }
 .tittle h1{
@@ -55,7 +55,7 @@ line-height: normal;
 .petsCounter{
     height: 100%;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
 }
 .petsCounter p{
     color: #4A2C36;
@@ -93,7 +93,7 @@ main{
     height: 70%;
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     flex-direction: column;
 }
 .filterBanner{
@@ -107,7 +107,7 @@ main{
     width: 70%;
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
 }
 .filterBanner h5{
     margin: 0;
@@ -131,7 +131,7 @@ font-weight: 600;
     display: flex;
     flex-direction: column;
     gap: 10px;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 0;
 }
 .filterBanner p{
@@ -159,16 +159,15 @@ font-weight: 600;
 
 @media (max-width: 1400px) {
     .pets{
-        align-items: end;
+        align-items: flex-end;
         width: 80%;
-        justify-content: end;
+        justify-content: flex-end;
     }
     .petsWrap{
         width: 100%;
     }
     .filter{
         width: 30%;
-        /* align-items: start; */
     }
 }
 @media (max-height: 800px){
