--- a/src/Pages/LandingPage/Nav/Nav.css
+++ b/src/Pages/LandingPage/Nav/Nav.css
@@ -17,7 +17,7 @@
     min-width: 160px;
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
 
 }
 .logo img{
