--- a/src/Pages/LandingPage/Ong/Ong.css
+++ b/src/Pages/LandingPage/Ong/Ong.css
@@ -11,8 +11,8 @@ z-index: -1;
 bottom: 0;
 height: 100%;
 display: flex;
-align-items: end;
-justify-content: end;
+align-items: flex-end;
+justify-content: flex-end;
 
 
 }
