--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -61,7 +61,7 @@ line-height: normal;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
 }
 .button p{
     color: #4A2C36;
