--- a/src/Pages/Pets/Pets.css
+++ b/src/Pages/Pets/Pets.css
@@ -15,8 +15,8 @@
     height: 90%;
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: end;
+    justify-content: flex-start;
+    align-items: flex-end;
 
 }
 .images{
@@ -24,8 +24,8 @@
     height: 50%;
     min-height: 400px;
     display: flex;
-    align-items: end;
-    justify-content: end;
+    align-items: flex-end;
+    justify-content: flex-end;
     min-width: 850px;
 }
 .Collunm{
@@ -53,8 +53,8 @@
     width: 54%; 
      height: 100%; 
      display: flex; 
-     align-items: end; 
-     justify-content: end;
+     align-items: flex-end; 
+     justify-content: flex-end;
      max-width: 500px; 
      min-width: 500px; 
     min-height: 300px; 
@@ -139,7 +139,7 @@ line-height: normal;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     /* margin-left:250px ; */
 }
 .petData p{
@@ -170,7 +170,7 @@ line-height: normal;
 .tittleComentarios{
     width: 100%;
     display: flex;
-    align-items: start;
+    justify-content: flex-start;
 
 }
 .input label{
