--- a/src/Pages/User/User.css
+++ b/src/Pages/User/User.css
@@ -137,4 +137,43 @@ line-height: normal;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 10px;
+}
+.modalDelete{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    inset: 0;
+    z-index: 3;
+    background-color: rgba(0, 0, 0, 0.411);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.deleteModalContainer{
+    width: 30%;
+    height: 40%;
+    background-color: white;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+}
+.modalDeleteTittle h1{
+    color: #F98AAE;
+    font-family: Rowdies;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+
+}
+.inputDelete{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
 }
