--- a/src/Components/Notification/NotificationError.css
+++ b/src/Components/Notification/NotificationError.css
@@ -11,6 +11,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+    z-index: 5;
 }
 .notificationErrorContainer > h2{
     color: white;
