--- a/src/Pages/User/User.css
+++ b/src/Pages/User/User.css
@@ -141,8 +141,8 @@ line-height: normal;
 }
 .modalDelete{
     width: 100%;
-    height: 100%;
-    position: absolute;
+    /* height: 100%; */
+    position: fixed;
     inset: 0;
     z-index: 3;
     background-color: rgba(0, 0, 0, 0.411);
@@ -151,8 +151,10 @@ line-height: normal;
     justify-content: center;
 }
 .deleteModalContainer{
-    width: 30%;
-    height: 40%;
+    width: auto;
+    min-width: 500px;
+    padding: 10px;
+    height: auto;
     background-color: white;
     position: absolute;
     display: flex;
