--- a/src/Pages/LandingPage/Initial/Initial.css
+++ b/src/Pages/LandingPage/Initial/Initial.css
@@ -47,9 +47,12 @@ flex-shrink: 0;
 border-radius: 40px;
     margin-right: 50px;
 }
-.buttons {
+.buttons button > a {
+text-decoration: none;
+color: #4A2C36;
 
 }
+
 .buttons .about{
     border: 1px #4A2C36 solid;
     background-color: white;
