--- a/src/Pages/Pets/Pets.css
+++ b/src/Pages/Pets/Pets.css
@@ -367,3 +367,12 @@ line-height: normal;
     }
   
 }  
+@media(max-Width: 800px){
+    .petInputs{
+  
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+    }
+}
